# BSP-Trees_SeminarBAI

./: CITATION.cff  notes.txt
Code/: README.md
Code/BSPTree_draft3/: BSPTree_draft3.cpp  BSPTree_draft3.vcxproj  BSPTree_draft3.vcxproj.filters  QuadElement.h  QuadTreeNode.h  QuadTreeTemplate.h  TreeNode.h  cLocation.cpp  cLocation.h  cPlane.h  dList.h  helpers.h
Code/BSPTree_draft3/x64/Debug/: BSPTree_draft3.exe.recipe  BSPTree_draft3.ilk  BSPTree_draft3.vcxproj.FileListAbsolute.txt  bsptree_draft3.obj.enc  vc143.idb
Code/BSPTree_draft3/x64/Debug/BSPTree_draft3.tlog/: BSPTree_draft3.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Code/Generic BSP Tree/: BSPTree_draft3.cpp  BSPTree_draft3.sln  BSPTree_draft3.vcxproj  OcTreeTemplate.h  QuadTreeTemplate.h  TreeNode.h
Code/Generic BSP Tree/x64/Debug/: BSPTree_draft3.exe.recipe  BSPTree_draft3.ilk  BSPTree_draft3.vcxproj.FileListAbsolute.txt  vc143.idb
Code/Generic BSP Tree/x64/Debug/BSPTree_draft3.tlog/: BSPTree_draft3.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  (+4 more)
Code/Quick Demo/: quick_demo.lpi  quick_demo.lpr  quick_demo.lps  unit_graph.pas  unit_quadtree.pas  unitmain.lfm  unitmain.pas
Code/Quick Demo/backup/: quick_demo.lpi  quick_demo.lps  unit_quadtree.pas  unitmain.lfm  unitmain.pas
Code/Quick Demo/lib/x86_64-win64/: quick_demo.compiled  unit_graph.ppu  unit_quadtree.ppu  unitmain.ppu
Code/draft2/draft2/: CMakeLists.txt  bsptree.cpp  bsptree.h  draft2.cpp  draft2.h
Code/firstdraft/: Quadtree.cpp  Quadtree.h  main.cpp
(+1 files in other folders)
